--- a/Tests/fixtures/smartphone-19.yml
+++ b/Tests/fixtures/smartphone-19.yml
@@ -1025,3 +1025,75 @@
     model: Allure Rise
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; NOH-NX9; HMSCore 5.0.4.301) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.106 HuaweiBrowser/11.0.3.304 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.0.3.304
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Huawei
+    model: Mate 40 Pro
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; ART-L28) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/70.0.3538.64 HuaweiBrowser/10.0.2.331 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 10.0.2.331
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Huawei
+    model: Y7p
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; NOH-AN00; HMSCore 5.0.4.301) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.106 HuaweiBrowser/11.0.4.300 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.0.4.300
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Huawei
+    model: Mate 40 Pro
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; HLK-L41; HMSCore 5.0.4.301; GMSCore 20.36.15) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.106 HuaweiBrowser/11.0.3.304 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.0.3.304
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: Huawei
+    model: Honor 9X Pro
+  os_family: Android
+  browser_family: Unknown
