--- a/Tests/fixtures/smartphone-19.yml
+++ b/Tests/fixtures/smartphone-19.yml
@@ -842,7 +842,7 @@
   device:
     type: tv
     brand: Leff
-    model: HV320WHB-N55
+    model: ""
   os_family: Android
   browser_family: Unknown
 -
@@ -951,5 +951,23 @@
     type: tablet
     brand: Lenovo
     model: TAB 2 A7
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.0.0; Leff Shell LC390TA2A Build/OPR5.170623.014; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/61.0.3163.98 Safari/537.36
+  os:
+    name: Android
+    version: 8.0.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 61.0.3163.98
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Leff
+    model: ""
   os_family: Android
   browser_family: Chrome
