--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -18358,9 +18358,9 @@ Silelis:
 
 # Leff
 Leff:
-  regex: 'Leff Shell (HV320WHB-N55)(?:[);/ ]|$)'
+  regex: 'Leff Shell (?:HV320WHB-N55|LC390TA2A)(?:[);/ ]|$)'
   device: 'tv'
-  model: '$1'
+  model: ''
 
 # Hardkernel (www.hardkernel.com)
 Hardkernel:
