--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -10,20 +10,24 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest, windows-latest, macOS-latest]
-        php-versions: ['7.2', '7.3', '7.4', '8.0']
-
+        php-version: ['7.2', '8.0']
+        include:
+          - php-version: 7.3
+            operating-system: ubuntu-latest
+          - php-version: 7.4
+            operating-system: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - name: Install PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php-versions }}
+          php-version: ${{ matrix.php-version }}
           tools: composer:v2
       - name: "Composer install"
         run: |
           composer install --ignore-platform-reqs
           composer require doctrine/cache ~1.2 --ignore-platform-reqs
-      - name: PHPUnit / PHP ${{ matrix.php-versions }}
+      - name: PHPUnit / PHP ${{ matrix.php-version }}
         run: |
           php -v
           ./vendor/bin/phpunit
