--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1298,5 +1298,13 @@
   user_agent: MobileSafari/604.1 CFNetwork/978.0.7 Darwin/18.6.0
   os:
     name: iOS
+    short_name: IOS
     version: "12.3"
+    platform: ""
+-
+  user_agent: MobileSafari/604.1 CFNetwork/978.0.7 Darwin/18.7.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: "12.4"
     platform: ""
